--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head> 
    <meta charset = "utf-8"> 
    <title>Danny Overman</title> 
-     <!--link to main stylesheet--> 
+     <link rel="stylesheet" type="text/css" href="css/main.css"> 
  </head> 
  
  
