--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
    <div id = "wrapper"> 
      <div class = "blurb"> 
        <h1>Hi there, My name is Danny!</h1> 
-         <p>I am your worst nightmare! <a href="#"> Rad more abut my life...</a></p> 
+         <p>I am your worst nightmare! <a href="#"> Read more abut my life...</a></p> 
        </div> 
         
        <footer> 
