--- a/index.html
+++ b/index.html
@@ -21,6 +21,26 @@
      <div class = "blurb"> 
        <h1>Hi there, My name is Danny!</h1> 
          <p>I am your worst nightmare! <a href="#"> Read more abut my life...</a></p> 
+      <br>
+      <p>What is GIT%3F</p>
+      <br>
+      <p>Answer%3A</p>
+      <br>
+      <p>Who started Git%3F</p>
+      <br>
+      <p>Answer%3A </p>
+      <br>
+      <p>What is Hub%3F</p>
+      <br>
+      <p>Answer%3A </p>
+      <br>
+      <p>Describe Repository and its role%3F</p>
+      <br>
+      <p>Answer%3A </p>
+      <br>
+      <p>My thoughts about GitHub.</p>
+      <br>
+      <p>Answer%3A It takes a long time for to update after changes are made, and not intuitive.</p>
        </div> 
         
        <footer> 
