--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
        <h1>Hi there, My name is Danny!</h1> 
          <p>I am your worst nightmare! <a href="#"> Read more abut my life...</a></p> 
       <br>
-      <p>What is GIT%3F</p>
+      <p>What is GIT?</p>
       <br>
-      <p>Answer%3A</p>
+      <p>Answer:</p>
       <br>
       <p>Who started Git%3F</p>
       <br>
