--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
       <br>
       <p>Answer:</p>
       <br>
-      <p>Who started Git%3F</p>
+      <p>Who started Git?</p>
       <br>
-      <p>Answer%3A </p>
+      <p>Answer: </p>
       <br>
-      <p>What is Hub%3F</p>
+      <p>What is Hub?</p>
       <br>
-      <p>Answer%3A </p>
+      <p>Answer: </p>
       <br>
-      <p>Describe Repository and its role%3F</p>
+      <p>Describe Repository and its role?</p>
       <br>
-      <p>Answer%3A </p>
+      <p>Answer: </p>
       <br>
       <p>My thoughts about GitHub.</p>
       <br>
-      <p>Answer%3A It takes a long time for to update after changes are made, and not intuitive.</p>
+      <p>Answer: It takes a long time for to update after changes are made, and not intuitive.</p>
        </div> 
         
        <footer> 
