--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <br>
       <p>What is GIT?</p>
       <br>
-      <p>Answer:</p>
+      <p>Answer: Is used by programmers, developers, and designers to store projects and keep track of changes to their files. It’s a cloud-based server that’s revolutionized real-time collaborative work between digital teams. </p>
       <br>
       <p>Who started Git?</p>
       <br>
@@ -32,11 +32,11 @@
       <br>
       <p>What is Hub?</p>
       <br>
-      <p>Answer: </p>
+      <p>Answer:  </p>
       <br>
       <p>Describe Repository and its role?</p>
       <br>
-      <p>Answer: </p>
+      <p>Answer: It is a directory or storage space where the projects reside.</p>
       <br>
       <p>My thoughts about GitHub.</p>
       <br>
