--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
       <br>
       <p>Who started Git?</p>
       <br>
-      <p>Answer: </p>
+      <p>Answer: Linus Torvalds started Git.</p>
       <br>
       <p>What is Hub?</p>
       <br>
-      <p>Answer:  </p>
+      <p>Answer: Hub is a tool that wraps git in order to extend it with exta functionality that makes it better when working with GitHub. </p>
       <br>
       <p>Describe Repository and its role?</p>
       <br>
